--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -605,7 +605,6 @@
         "    {\"location_id\": \"LOC021\", \"name\": \"exp_base_gt_lr\", \"path\": \"CTSA - Base - GT - LR.json\", \"use\": \"LangExtract\"},\n",
         "]\n",
         "\n",
-        "\n",
         "# --- DEFINE YOUR EXPERIMENTS HERE ---\n",
         "#\n",
         "# Experiments are run in order from top to bottom.\n",
@@ -650,7 +649,7 @@
         "                \"er_file_name\": \"ner_test_1_le\",\n",
         "                \"processing_stage\": \"LE\",\n",
         "                \"llm_provider\": \"Gemini\",\n",
-        "                \"llm_model\": \"gemini-1.5-pro-latest\",\n",
+        "                \"llm_model\": \"gemini-2.5-pro\",\n",
         "            },\n",
         "            {\n",
         "                \"experiment_id\": \"GRP007EXP002\",\n",
@@ -663,7 +662,7 @@
         "                \"er_file_name\": \"ner_test_2_le\",\n",
         "                \"processing_stage\": \"LE\",\n",
         "                \"llm_provider\": \"Gemini\",\n",
-        "                \"llm_model\": \"gemini-1.5-pro-latest\",\n",
+        "                \"llm_model\": \"gemini-2.5-pro\",\n",
         "            },\n",
         "            {\n",
         "                \"experiment_id\": \"GRP007EXP003\",\n",
@@ -676,7 +675,7 @@
         "                \"er_file_name\": \"ner_test_3_le\",\n",
         "                \"processing_stage\": \"LE\",\n",
         "                \"llm_provider\": \"Gemini\",\n",
-        "                \"llm_model\": \"gemini-1.5-pro-latest\",\n",
+        "                \"llm_model\": \"gemini-2.5-pro\",\n",
         "            },\n",
         "            {\n",
         "                \"experiment_id\": \"GRP007EXP004\",\n",
@@ -689,7 +688,32 @@
         "                \"er_file_name\": \"ner_test_4_le\",\n",
         "                \"processing_stage\": \"LE\",\n",
         "                \"llm_provider\": \"Gemini\",\n",
-        "                \"llm_model\": \"gemini-1.5-pro-latest\",\n",
+        "                \"llm_model\": \"gemini-2.5-pro\",\n",
+        "            },\n",
+        "        ],\n",
+        "    },\n",
+        "    {\n",
+        "        \"group_id\": \"GRP009\",\n",
+        "        \"group_name\": \"Generate Ground Truth for base\",\n",
+        "        \"run_group\": False,\n",
+        "        \"generate_output\": False,\n",
+        "        \"description\": \"This group contains utility experiments designed to prepare the needed ground truth files. It uses the original textfiles and LangExtract.\",\n",
+        "        \"random_seed\": 42,\n",
+        "        \"input_location\": \"input_dir\",\n",
+        "        \"output_location\": \"output_dir\",\n",
+        "        \"experiments\": [\n",
+        "            {\n",
+        "                \"experiment_id\": \"GRP009EXP001\",\n",
+        "                \"experiment_name\": \"Experiment base ground truth\",\n",
+        "                \"description\": \"A utility task that uses LangExtract from Google to generate a ground truth file from the source file.\",\n",
+        "                \"run_experiment\": True,\n",
+        "                \"run_workflow\": True,\n",
+        "                \"clear_database\": False,\n",
+        "                \"doc_file_name\": \"exp_base_text\",\n",
+        "                \"er_file_name\": \"exp_base_gt_lr\",\n",
+        "                \"processing_stage\": \"LE\",\n",
+        "                \"llm_provider\": \"Gemini\",\n",
+        "                \"llm_model\": \"gemini-2.5-pro\",\n",
         "            },\n",
         "        ],\n",
         "    },\n",
@@ -873,7 +897,7 @@
         "                \"er_file_name\": \"ner_test_1_er\",\n",
         "                \"processing_stage\": \"D2STM2LTMCON\",\n",
         "                \"llm_provider\": \"Gemini\",\n",
-        "                \"llm_model\": \"gemini-1.5-pro-latest\",\n",
+        "                \"llm_model\": \"gemini-2.5-pro\",\n",
         "                \"temperature\": 0.1,\n",
         "                \"doc_chunk_size\": 7,\n",
         "                \"doc_chunk_overlap\": 2,\n",
@@ -894,7 +918,7 @@
         "                \"er_file_name\": \"ner_test_1_er\",\n",
         "                \"processing_stage\": \"D2STM2LTMCON\",\n",
         "                \"llm_provider\": \"Gemini\",\n",
-        "                \"llm_model\": \"gemini-1.5-flash-latest\",\n",
+        "                \"llm_model\": \"gemini-2.5-flash\",\n",
         "                \"temperature\": 0.1,\n",
         "                \"doc_chunk_size\": 7,\n",
         "                \"doc_chunk_overlap\": 2,\n",
@@ -1220,7 +1244,7 @@
         "                \"doc_file_name\": \"ner_test_4_text\",\n",
         "                \"er_file_name\": [\"ner_test_4_golden\", \"ner_test_4_le\"],\n",
         "                \"llm_provider\": \"Gemini\",\n",
-        "                \"llm_model\": \"gemini-1.5-pro-latest\",\n",
+        "                \"llm_model\": \"gemini-2.5-pro\",\n",
         "                \"temperature\": 0.1,\n",
         "                \"doc_chunk_size\": 8,\n",
         "                \"doc_chunk_overlap\": 3,\n",
@@ -1244,7 +1268,7 @@
         "                \"doc_file_name\": \"ner_test_4_text\",\n",
         "                \"er_file_name\": [\"ner_test_4_golden\", \"ner_test_4_le\"],\n",
         "                \"llm_provider\": \"Gemini\",\n",
-        "                \"llm_model\": \"gemini-1.5-flash-latest\",\n",
+        "                \"llm_model\": \"gemini-2.5-flash\",\n",
         "                \"temperature\": 0.1,\n",
         "                \"doc_chunk_size\": 8,\n",
         "                \"doc_chunk_overlap\": 3,\n",
@@ -4186,7 +4210,7 @@
         "    OPENAI_API_KEY = secrets.get('OPENAI_API_KEY')\n",
         "\n",
         "    LLM_PROVIDERS = {\n",
-        "        \"Gemini\": {\"models\": [\"gemini-1.5-pro-latest\", \"gemini-1.5-flash-latest\", \"gemini-1.0-pro\"]},\n",
+        "        \"Gemini\": {\"models\": [\"gemini-2.5-pro\", \"gemini-2.5-flash\", \"gemini-2.0-pro\"]},\n",
         "        \"OpenAI\": {\"models\": [\"gpt-4.1\", \"gpt-4.1-mini\", \"gpt-4.1-nano\", \"gpt-4o\", \"gpt-4-turbo\", \"gpt-3.5-turbo\"]},\n",
         "    }\n",
         "\n",
