--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -356,11 +356,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
-        "id": "FBTdy4Ta4Y6S"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FBTdy4Ta4Y6S",
+        "outputId": "34434692-afd7-4b60-c4ae-7fb1d126caa8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Running in Google Colab.\n",
+            "Project Root Path set to: /content/drive/MyDrive/Mnemosyne\n"
+          ]
+        }
+      ],
       "source": [
         "# A few imports are needed for the setup. The rest will come next.\n",
         "import sys\n",
@@ -412,11 +426,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
-        "id": "dYGILMcJNBGR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dYGILMcJNBGR",
+        "outputId": "5e428457-f923-48f4-ec30-25f70d0a7178"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab environment detected. Installing required packages...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:root:Successfully loaded secrets from google.colab.userdata.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Package installation complete.\n"
+          ]
+        }
+      ],
       "source": [
         "# --- Conditional Installation for Colab ---\n",
         "if IS_COLAB:\n",
@@ -496,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "id": "kz_3yOD5IAfM"
       },
@@ -566,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "id": "XTTlUzV9-_lk"
       },
@@ -720,7 +760,7 @@
         "    {\n",
         "        \"group_id\": \"GRP002\",\n",
         "        \"group_name\": \"Mnemosyne test with GPT 4.1\",\n",
-        "        \"run_group\": True,\n",
+        "        \"run_group\": False,\n",
         "        \"generate_output\": True,\n",
         "        \"description\": \"This group serves as a tool test to validate the core functionality of the Mnemosyne pipeline using the GPT 4.1 series of models. Each experiment processes a small, standardized test document to ensure that data ingestion, entity extraction, and knowledge graph refinement are all working as expected. This provides a quick verification of the system's end-to-end health.\",\n",
         "        \"random_seed\": 42,\n",
@@ -1296,7 +1336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "id": "clkDemShJa_t"
       },
@@ -1361,7 +1401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
         "id": "MCVYYMEA4hzJ"
       },
@@ -1432,7 +1472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "id": "vRqGyyRRmTh9"
       },
@@ -1482,7 +1522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "id": "_LuiIAEBm0jI"
       },
@@ -1517,7 +1557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "id": "UEoq7IHJm_nI"
       },
@@ -1580,7 +1620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
         "id": "6d3RPLqmmjS4"
       },
@@ -1846,7 +1886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {
         "id": "3UZHlLrFM_w7"
       },
@@ -2201,7 +2241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 74,
       "metadata": {
         "id": "QsInh4IFyXnl"
       },
@@ -2398,7 +2438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {
         "id": "yRVUUVAjunrK"
       },
@@ -2503,7 +2543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
         "id": "HrKlx_qve7_c"
       },
@@ -2826,7 +2866,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
         "id": "NfgPOjFFhpE-"
       },
@@ -2978,7 +3018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {
         "id": "jqOvCj8F1r33"
       },
@@ -3408,7 +3448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {
         "id": "IVpo7CydwfYp"
       },
@@ -3468,7 +3508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
         "id": "4LMoue7Kwws-"
       },
@@ -3706,7 +3746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "metadata": {
         "id": "jjSLkhrLw7fX"
       },
@@ -3991,7 +4031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {
         "id": "madKwS2mqoln"
       },
@@ -4059,7 +4099,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "metadata": {
         "id": "s-qABwUs2pnA"
       },
@@ -4189,7 +4229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 84,
       "metadata": {
         "id": "urhKizid3PHj"
       },
@@ -4303,7 +4343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 85,
       "metadata": {
         "id": "X0wgs70GClve"
       },
@@ -4474,7 +4514,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 86,
       "metadata": {
         "id": "_1IQlKMT3uAm"
       },
@@ -4594,7 +4634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 87,
       "metadata": {
         "id": "FlJJltyoaxn2"
       },
@@ -4710,7 +4750,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 88,
       "metadata": {
         "id": "Dk64HrKmI1tQ"
       },
@@ -4838,7 +4878,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 89,
       "metadata": {
         "id": "s5687a-S3dVK"
       },
@@ -5129,11 +5169,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 90,
       "metadata": {
-        "id": "Yp7sEX5GT2BE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yp7sEX5GT2BE",
+        "outputId": "95a76e29-5b25-496a-9d69-a6602eb71cc2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO - --- Starting Experiment Run: 9 groups defined ---\n",
+            "INFO - Run ID: RUN_2025-08-22_23-35-14\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - EVALUATING EXPERIMENT GROUP: Pre Run Utility & Cleanup (GRP001)\n",
+            "INFO - Group Description: This group contains utility experiments designed to prepare the environment for a fresh run. Its primary purpose is to ensure the Neo4j database is in a clean and consistent state before any new data is generated.\n",
+            "INFO - Using random seed 42 for group 'Pre Run Utility & Cleanup'.\n",
+            "INFO - PROCESSING EXPERIMENT GROUP: Pre Run Utility & Cleanup (1 experiments)\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - --- Processing Experiment 1/1 in group 'Pre Run Utility & Cleanup': Clear_Database (GRP001EXP001) ---\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - Executing utility task: Clearing database.\n",
+            "INFO - Successfully connected to Neo4j database.\n",
+            "INFO - Neo4j database cleared.\n",
+            "INFO - Neo4j connection closed.\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - EVALUATING EXPERIMENT GROUP: Generate Ground Truth (GRP007)\n",
+            "INFO - Group Description: This group contains utility experiments designed to prepare the needed ground truth files. It uses the original textfiles and LangExtract.\n",
+            "INFO - SKIPPING group 'Generate Ground Truth' because 'run_group' is set to False.\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - EVALUATING EXPERIMENT GROUP: Generate Ground Truth for base (GRP009)\n",
+            "INFO - Group Description: This group contains utility experiments designed to prepare the needed ground truth files. It uses the original textfiles and LangExtract.\n",
+            "INFO - SKIPPING group 'Generate Ground Truth for base' because 'run_group' is set to False.\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - EVALUATING EXPERIMENT GROUP: Mnemosyne test with GPT 4.1 (GRP002)\n",
+            "INFO - Group Description: This group serves as a tool test to validate the core functionality of the Mnemosyne pipeline using the GPT 4.1 series of models. Each experiment processes a small, standardized test document to ensure that data ingestion, entity extraction, and knowledge graph refinement are all working as expected. This provides a quick verification of the system's end-to-end health.\n",
+            "INFO - SKIPPING group 'Mnemosyne test with GPT 4.1' because 'run_group' is set to False.\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - EVALUATING EXPERIMENT GROUP: Mnemosyne test all test files with GPT 4.1 (GRP008)\n",
+            "INFO - Group Description: This group serves as a tool test to validate the core functionality of the Mnemosyne pipeline using the GPT 4.1 series of models. Each experiment processes a small, standardized test document to ensure that data ingestion, entity extraction, and knowledge graph refinement are all working as expected. This provides a quick verification of the system's end-to-end health.\n",
+            "INFO - SKIPPING group 'Mnemosyne test all test files with GPT 4.1' because 'run_group' is set to False.\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - EVALUATING EXPERIMENT GROUP: Mnemosyne test with Gemini 1.5 (GRP006)\n",
+            "INFO - Group Description: This group serves as a tool test to validate the core functionality of the Mnemosyne pipeline using the Gemini 1.5 series of models. Each experiment processes a small, standardized test document to ensure that data ingestion, entity extraction, and knowledge graph refinement are all working as expected. This provides a quick verification of the system's end-to-end health.\n",
+            "INFO - SKIPPING group 'Mnemosyne test with Gemini 1.5' because 'run_group' is set to False.\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - EVALUATING EXPERIMENT GROUP: Test Refinement Cycles (GRP003)\n",
+            "INFO - Group Description: This group is designed to isolate and measure the impact of the semantic refinement process. By running the same extraction task with a varying number of refinement cycles (from zero to five), these experiments will quantify how iterative consolidation improves the knowledge graph's quality, coherence, and accuracy.\n",
+            "INFO - SKIPPING group 'Test Refinement Cycles' because 'run_group' is set to False.\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - EVALUATING EXPERIMENT GROUP: Test Chunk Size (GRP004)\n",
+            "INFO - Group Description: This group investigates the effect of document chunk size on the quality of the final knowledge graph. By varying the number of paragraphs processed in each call to the LLM, these experiments aim to find the optimal balance between providing sufficient context for accurate entity extraction and avoiding excessive token usage.\n",
+            "INFO - SKIPPING group 'Test Chunk Size' because 'run_group' is set to False.\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - EVALUATING EXPERIMENT GROUP: Compare GPT and Gemini (GRP005)\n",
+            "INFO - Group Description: This group conducts a head-to-head comparison of the latest models from OpenAI (GPT series) and Google (Gemini series). By running the same extraction and refinement tasks with each model, these experiments aim to benchmark their relative performance, accuracy, and cost-effectiveness for knowledge graph creation.\n",
+            "INFO - SKIPPING group 'Compare GPT and Gemini' because 'run_group' is set to False.\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - ALL EXPERIMENTS COMPLETED\n",
+            "INFO - Total execution time: 0:00:00.376317\n",
+            "INFO - ==================================================================================================================================\n",
+            "INFO - --- Done Experiment Run: 9 groups defined ---\n",
+            "INFO - Run ID: RUN_2025-08-22_23-35-14\n"
+          ]
+        }
+      ],
       "source": [
         "# --- MAIN EXECUTION BLOCK ---\n",
         "\n",
