Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -100,7 +100,7 @@
 \usepackage{comment}          % For commenting out large blocks of text
 \usepackage{pdfpages}         % For inserting pages from external PDF files
 \usepackage{afterpage}        % For executing commands after the current page is shipped out
-\usepackage{lipsum}           % For dummy text during development (remove for final version)
+%\usepackage{lipsum}           % For dummy text during development (remove for final version)
 
 
 % =============================================================================
