--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -356,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -426,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -536,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "metadata": {
         "id": "kz_3yOD5IAfM"
       },
@@ -606,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": null,
       "metadata": {
         "id": "XTTlUzV9-_lk"
       },
@@ -1373,7 +1373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": null,
       "metadata": {
         "id": "clkDemShJa_t"
       },
@@ -1438,7 +1438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": null,
       "metadata": {
         "id": "MCVYYMEA4hzJ"
       },
@@ -1509,7 +1509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": null,
       "metadata": {
         "id": "vRqGyyRRmTh9"
       },
@@ -1559,7 +1559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": null,
       "metadata": {
         "id": "_LuiIAEBm0jI"
       },
@@ -1594,7 +1594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": null,
       "metadata": {
         "id": "UEoq7IHJm_nI"
       },
@@ -1657,7 +1657,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": null,
       "metadata": {
         "id": "6d3RPLqmmjS4"
       },
@@ -1923,7 +1923,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": null,
       "metadata": {
         "id": "3UZHlLrFM_w7"
       },
@@ -2278,7 +2278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": null,
       "metadata": {
         "id": "QsInh4IFyXnl"
       },
@@ -2475,7 +2475,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": null,
       "metadata": {
         "id": "yRVUUVAjunrK"
       },
@@ -2580,7 +2580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": null,
       "metadata": {
         "id": "HrKlx_qve7_c"
       },
@@ -2903,7 +2903,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": null,
       "metadata": {
         "id": "NfgPOjFFhpE-"
       },
@@ -3055,7 +3055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": null,
       "metadata": {
         "id": "jqOvCj8F1r33"
       },
@@ -3485,7 +3485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": null,
       "metadata": {
         "id": "IVpo7CydwfYp"
       },
@@ -3545,7 +3545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": null,
       "metadata": {
         "id": "4LMoue7Kwws-"
       },
@@ -3783,7 +3783,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": null,
       "metadata": {
         "id": "jjSLkhrLw7fX"
       },
@@ -4068,7 +4068,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": null,
       "metadata": {
         "id": "madKwS2mqoln"
       },
@@ -4254,12 +4254,12 @@
       "metadata": {
         "id": "7An_ndVI-h5I"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": null,
       "metadata": {
         "id": "s-qABwUs2pnA"
       },
@@ -4389,7 +4389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": null,
       "metadata": {
         "id": "urhKizid3PHj"
       },
@@ -4503,7 +4503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": null,
       "metadata": {
         "id": "X0wgs70GClve"
       },
@@ -4674,7 +4674,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": null,
       "metadata": {
         "id": "_1IQlKMT3uAm"
       },
@@ -4731,22 +4731,27 @@
         "                prompt = self.config.Q_LE.format\n",
         "                examples = [\n",
         "                    lx.data.ExampleData(\n",
-        "                        text=\"ROMEO. But soft! What light through yonder window breaks? It is the east, and Juliet is the sun.\",\n",
+        "                        text=\"The Board of Supervisors shall govern the affairs of the township and may make regulations as necessary to provide for the health, safety and welfare of its citizens, as authorized by the Second Class Township Code.\",\n",
         "                        extractions=[\n",
         "                            lx.data.Extraction(\n",
-        "                                extraction_class=\"character\",\n",
-        "                                extraction_text=\"ROMEO\",\n",
-        "                                attributes={\"emotional_state\": \"wonder\"}\n",
+        "                                extraction_class=\"governing_body\",\n",
+        "                                extraction_text=\"Board of Supervisors\",\n",
+        "                                attributes={\"role\": \"legislative and executive\"}\n",
         "                            ),\n",
         "                            lx.data.Extraction(\n",
-        "                                extraction_class=\"emotion\",\n",
-        "                                extraction_text=\"But soft!\",\n",
-        "                                attributes={\"feeling\": \"gentle awe\"}\n",
+        "                                extraction_class=\"corporate_power\",\n",
+        "                                extraction_text=\"govern the affairs of the township\",\n",
+        "                                attributes={\"scope\": \"general governance\"}\n",
         "                            ),\n",
         "                            lx.data.Extraction(\n",
-        "                                extraction_class=\"relationship\",\n",
-        "                                extraction_text=\"Juliet is the sun\",\n",
-        "                                attributes={\"type\": \"metaphor\"}\n",
+        "                                extraction_class=\"specific_duty\",\n",
+        "                                extraction_text=\"provide for the health, safety and welfare\",\n",
+        "                                attributes={\"category\": \"police power\"}\n",
+        "                            ),\n",
+        "                            lx.data.Extraction(\n",
+        "                                extraction_class=\"legal_citation\",\n",
+        "                                extraction_text=\"Second Class Township Code\",\n",
+        "                                attributes={\"statute\": \"Act of May 1, 1933 (P.L. 103, No. 69)\"}\n",
         "                            ),\n",
         "                        ]\n",
         "                    )\n",
@@ -4794,7 +4799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": null,
       "metadata": {
         "id": "FlJJltyoaxn2"
       },
@@ -4910,7 +4915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": null,
       "metadata": {
         "id": "Dk64HrKmI1tQ"
       },
@@ -5038,7 +5043,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": null,
       "metadata": {
         "id": "s5687a-S3dVK"
       },
@@ -6178,7 +6183,6 @@
       "gpuType": "A100",
       "machine_shape": "hm",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
