--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -645,7 +645,7 @@
         "    {\"location_id\": \"LOC021\", \"name\": \"exp_base_gt_lr\", \"path\": \"CTSA - Base - GT - LR.json\", \"use\": \"LangExtract\"},\n",
         "]\n",
         "\n",
-        "# --- DEFINE YOUR EXPERIMENTS HERE ---\n",
+        "# --- DEFINE EXPERIMENTS HERE ---\n",
         "#\n",
         "# Experiments are run in order from top to bottom.\n",
         "#\n",
@@ -735,7 +735,7 @@
         "    {\n",
         "        \"group_id\": \"GRP009\",\n",
         "        \"group_name\": \"Generate Ground Truth for base\",\n",
-        "        \"run_group\": False,\n",
+        "        \"run_group\": True,\n",
         "        \"generate_output\": False,\n",
         "        \"description\": \"This group contains utility experiments designed to prepare the needed ground truth files. It uses the original textfiles and LangExtract.\",\n",
         "        \"random_seed\": 42,\n",
@@ -1326,7 +1326,7 @@
         "        \"group_id\": \"GRP010\",\n",
         "        \"group_name\": \"Base case\",\n",
         "        \"description\": \"This group conducts a run against the base document.\",\n",
-        "        \"run_group\": True, # Set to False to skip this entire group\n",
+        "        \"run_group\": False, # Set to False to skip this entire group\n",
         "        \"generate_output\": True, # Set to False to prevent file output for this group\n",
         "        \"random_seed\": 42,\n",
         "        \"input_location\": \"input_dir\",\n",
